Added new updates for contact form

--- a/intro.html
+++ b/intro.html
@@ -15,9 +15,10 @@
   <!-- Hero Section -->
   <section class="hero" data-aos="fade-up" data-aos-duration="1200" data-aos-easing="ease-out-cubic">
     <div class="hero-text">
-      <img src="assets/logo.png"><h1>Welcome to <span>ContentCraft</span></h1>
-      <p>Your all-in-one AI-powered companion for YouTube success.</p>
-      <a href="dashboard.html" class="cta-btn">Get Started</a>
+      <img src="assets/logo.png"><h1>WELCOME TO <span>CONTENT-CRAFT</span></h1>
+      <p>Your all-in-one AI-powered companion for "CONTENTGENERATION" </p>
+
+      <a href="dashboard.html" class="cta-btn">Demo</a>
     </div>
     <div class="hero-img" data-aos="zoom-in" data-aos-duration="1400">
       <img src="assets/final.webp" alt="ContentCraft Hero">
