--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
   <body>
     <h1>Welcome to MyFirstRepo - Jenkins Integration</h1>
     <p>This is a sample HTML file for Jenkins build testing.</p>
+    <h1>Continous Integration Testing</h1>
+    <p>This is a basic change to test Jenkins CI.</p>
   </body>
 </html>
